LIST OF CHANGES

 - reference find role: when parsing a genome reference string 
   return the analysis, along with the organism, strain
   and transcriptome version, if present
 - refactor transcriptome::find to improve code reuse and add
   new find file/path/index attributes and functionalities

release 86.6
 - unused db tables, which were renamed in the previous release,
     are dropped; exclusions in teh DBIx class loader script removed
 - Jenkins daemon - a bug in locating prod ssl server certificates fixed
 - added a convenience factory class to transform rpt list strings
   into a composition

release 86.5
 - small fix in locate_runfolder for rna seqc links
 - remove unused classes for image generation
 - be compatible with ClearPress version 475.3.3 and above
 - set explicit dist to precise in travis yml
 - add dual configuration for apache mpm worker/event
 - Jenkins' daemon with HTTPS as default configuration
 - drop or rename orphaned tables from db
   - drop
     cost_code
     cost_group
     sensor_data_instrument
     sensor_data
     sensor_instrument
     sensor
     mail_run_project_followers
   - rename
     event_type_service to todrop_event_type_service
     ext_service to todrop_ext_service
     event_type_subscriber to todrop_event_type_subscriber

release 86.4
 - reference find role: remove unused 'subset' attribute and
   previously deprecated 'single_ref_found' method 
 - increate http tmeout for event notification
 - run tracking server on two ports - one accepting http traffic, another
   one https only; the same set of URLs on both ports
 - tracking web GUI link to request LIMs page now changed to point to
   a more useful lane page; request id will not be available if XML
   LIMs feeds are discontinued
 - link to auth script residing in the same virtual host 
 - sensor-related code removed
 - mkfastq option added to make a samplesheet suitable for 10x mkfastq

release 86.3