@@ -7,7 +7,7 @@ my $package = 'npg_tracking::glossary::rpt';
 use_ok($package);
 
 subtest 'rpt string inflate' => sub {
-  plan tests => 13;
+  plan tests => 15;
   
   throws_ok {$package->inflate_rpt()}
     qr/rpt string argument is missing/,
@@ -16,19 +16,19 @@ subtest 'rpt string inflate' => sub {
     qr/rpt string should not contain \';\'/,
     'rpt list delimeter present - error';
   throws_ok {$package->inflate_rpt('456')}
-    qr/Both id_run and position should be available/,
+    qr/Both id_run and position should de defined non-zero values/,
     'no position - error';
   throws_ok {$package->inflate_rpt(':456')}
-    qr/Both id_run and position should be available/,
+    qr/Argument \"\" isn't numeric/,
     'no run id - error';
   throws_ok {$package->inflate_rpt('2::456')} 
-    qr/Both id_run and position should be available/,
+    qr/Argument \"\" isn't numeric/,
     'no position - error';
   throws_ok {$package->inflate_rpt('2:0')}
-    qr/Both id_run and position should be available/,
+    qr/Both id_run and position should de defined non-zero values/,
     'position sero - error';
   throws_ok {$package->inflate_rpt('0:2:4')}
-    qr/Both id_run and position should be available/,
+    qr/Both id_run and position should de defined non-zero values/,
     'run zero - error';  
   is_deeply($package->inflate_rpt('2:11'),
     {id_run=>2, position=>11}, 'correct output');
@@ -40,11 +40,18 @@ subtest 'rpt string inflate' => sub {
   is_deeply($package->inflate_rpt('2:11:4'),
     {id_run=>2, position=>11, tag_index=>4},
     'correct output');
-  lives_ok {$package->inflate_rpt('do:11:da')}
-    'data type is not validated';
-  is_deeply($package->inflate_rpt('do:11:da:extra'),
-    {id_run=>'do', position=>11, tag_index=>'da'},
-    'only the first three cubstrings are taken into account');  
+  throws_ok {$package->inflate_rpt('do:11:4')}
+    qr/Argument \"do\" isn't numeric/,
+    'id_run should be an integer';
+  throws_ok {$package->inflate_rpt('3:do:4')}
+    qr/Argument \"do\" isn't numeric/,
+    'position should be an integer';
+   throws_ok {$package->inflate_rpt('3:4:do')}
+    qr/Argument \"do\" isn't numeric/,
+    'tag_index should be an integer';
+  is_deeply($package->inflate_rpt('2:11:3:extra'),
+    {id_run=>2, position=>11, tag_index=>3},
+    'only the first three substrings are taken into account');  
 };
 
 subtest 'deflate to rpt string' => sub {
